feat: 优化组件及calss page

--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
   "name": "zgy-vue2",
-  "version": "0.1.5",
+  "version": "0.1.7",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "bulid:components": "vue-cli-service build --target lib --name index --dest lib/components src/components/index.js",
-    "bulid:store": "vue-cli-service build --target lib --name index --dest lib/store src/store/ZStore/index.js",
-    "bulid:utils": "vue-cli-service build --target lib --name index --dest lib/utils src/utils/Page.js",
-    "bulid:lib": "npm run bulid:components && npm run bulid:store && npm run bulid:utils"
+    "bulid:lib": "vue-cli-service build --target lib --name index --dest lib src/components/index.js"
   },
   "dependencies": {
     "core-js": "^3.6.5",
