--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "zgy-vue2",
-  "version": "0.1.7",
+  "version": "0.1.9",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "bulid:lib": "vue-cli-service build --target lib --name index --dest lib src/components/index.js"
+    "bulid:lib": "vue-cli-service build --target lib --name index --dest lib src/index.js"
   },
   "dependencies": {
     "core-js": "^3.6.5",
